# MEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Engine/: CMakeLists.txt
Engine/inc/Base/: Actor.h  ActorComponent.h  Base.h
Engine/inc/Math/: Frustum.h  Matrix.h  Plane.h
Engine/inc/Render/: CameraNode.h  ISceneNode.h  LightManager.h  Material.h  RootNode.h  Scene.h  SceneNode.h  SceneNodeProperties.h
Engine/src/Base/: Actor.cpp
Engine/src/Math/: Frustum.cpp  Matrix.cpp  Plane.cpp
Engine/src/Render/: CameraNode.cpp  LightManger.cpp  Material.cpp  RootNode.cpp  Scene.cpp  SceneNode.cpp  SceneNodeProperties.cpp
Test/: CMakeLists.txt  FrustumTest.cpp  PlaneTest.cpp
